[package]
name = "rogue_forest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19.0"
crossterm = "0.25"
serde = { version = "1.0.145", features = ["derive"] }
once_cell = "1.15.0"
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.5.0"